Swagger fixes
