# app/docs/swagger.yaml
@@ -57,8 +57,8 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
         "400":
           description: Bad Request
         "404":
@@ -85,8 +85,8 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
         "400":
           description: Bad Request
         "404":
@@ -159,8 +159,8 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           schema:
             $ref: '#/definitions/entity.User'
         "400":
